[package]
name = "rustyline-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rustyline = "8.2"

[[bin]]
name = "only-rustyline-io"
path = "src/only-rustyline-io.rs"

[[bin]]
name = "parallel-writes"
path = "src/parallel-writes.rs"
